--- a/src/layout/CMakeLists.txt
+++ b/src/layout/CMakeLists.txt
@@ -1,1 +1,1 @@
-ADD_LIBRARY(Layout layout.cpp methodphonetic.cpp phoneticparser.cpp)
+ADD_LIBRARY(Layout layout.cpp methodphonetic.cpp phoneticparser.cpp phoneticsuggestion.cpp)
