--- a/src/im/ibus/CMakeLists.txt
+++ b/src/im/ibus/CMakeLists.txt
@@ -1,1 +1,3 @@
-ADD_LIBRARY(IM_iBus ibus_engine.cpp)
+INCLUDE_DIRECTORIES(. ../../ ../../layout ${IBUS_INCLUDE_DIRS})
+ADD_LIBRARY(IM_iBus ibus_engine.cpp
+                    ibus_keycode.h)
