--- a/src/layout/CMakeLists.txt
+++ b/src/layout/CMakeLists.txt
@@ -1,1 +1,9 @@
-ADD_LIBRARY(Layout layout.cpp methodphonetic.cpp phoneticparser.cpp phoneticsuggestion.cpp)
+include_directories(. ../im )
+ADD_LIBRARY(Layout
+            layout.cpp
+            layout.h
+            methodphonetic.cpp
+            phoneticparser.cpp
+            phoneticparser.h
+            phoneticsuggestion.cpp
+            phoneticsuggestion.h)
