CMake: Use functions as lowercase names.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,22 @@
 cmake_minimum_required(VERSION 2.8)
 
 project(OpenBangla-Keyboard)
-SET(APP_NAME "OpenBangla-Keyboard")
+set(APP_NAME "OpenBangla-Keyboard")
 
-## Set Compiler Standard 
+## Set Compiler Standard
 set(CMAKE_CXX_STANDARD 11)
 
 # Get system information. WIN32 and APPLE are defined by CMake
-IF(CMAKE_SYSTEM_NAME STREQUAL "Linux")
-  SET(OS_LINUX 1)
-ENDIF(CMAKE_SYSTEM_NAME STREQUAL "Linux")
+if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
+  set(OS_LINUX 1)
+endif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
 
 # For Linux.
-IF(OS_LINUX)
+if(OS_LINUX)
+  include(FindPkgConfig)
   ## Find iBus ##
-  FIND_PACKAGE(PkgConfig)
-  PKG_CHECK_MODULES(IBUS REQUIRED ibus-1.0)
-ENDIF(OS_LINUX)
+  find_package(PkgConfig)
+  pkg_check_modules(IBUS REQUIRED ibus-1.0)
+endif(OS_LINUX)
 
-ADD_SUBDIRECTORY(src)
+add_subdirectory(src)
