Experimental installation support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,9 @@ endif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
 
 # For Linux.
 if(OS_LINUX)
+  # Include our Linux specific additions
+  include(CMakeLinux.txt)
+  
   include(FindPkgConfig)
   ## Find iBus ##
   find_package(PkgConfig)
