Use Qt5's Json parsing feature TODO: Fix AutoCorrect suggestion, its now broken

--- a/src/im/ibus/CMakeLists.txt
+++ b/src/im/ibus/CMakeLists.txt
@@ -1,3 +1,5 @@
 include_directories(. ../../ ../../layout ${IBUS_INCLUDE_DIRS})
 add_library(IM_iBus ibus_engine.cpp
                     ibus_keycode.h)
+
+target_link_libraries(IM_iBus Qt5::Core Qt5::Sql)
