Implemented Temporary Cache Manager

--- a/src/layout/CMakeLists.txt
+++ b/src/layout/CMakeLists.txt
@@ -12,6 +12,8 @@ add_library(Layout
             autocorrect.h
             database.cpp
             database.h
+            cachemanager.cpp
+            cachemanager.h
             phoneticsuggestion.cpp
             phoneticsuggestion.h)
 
