Implemented Layout handiling

--- a/src/frontend/CMakeLists.txt
+++ b/src/frontend/CMakeLists.txt
@@ -3,5 +3,5 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-add_executable(OpenBangla-Keyboard main.cpp TopBar.cpp images.qrc)
+add_executable(OpenBangla-Keyboard main.cpp Layout.cpp TopBar.cpp images.qrc)
 target_link_libraries(OpenBangla-Keyboard Qt5::Widgets)
