Now it looks beautiful in CMake :grin:

--- a/src/frontend/CMakeLists.txt
+++ b/src/frontend/CMakeLists.txt
@@ -3,5 +3,14 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-add_executable(OpenBangla-Keyboard main.cpp Layout.cpp Settings.cpp TopBar.cpp AboutFile.cpp LayoutViewer.cpp images.qrc)
+set(SRC_GUI TopBar.cpp
+            AboutFile.cpp
+            LayoutViewer.cpp
+            images.qrc)
+
+set(SRC_MAIN main.cpp
+             Layout.cpp
+             Settings.cpp)
+
+add_executable(OpenBangla-Keyboard ${SRC_MAIN} ${SRC_GUI})
 target_link_libraries(OpenBangla-Keyboard Qt5::Widgets)
