Added skeleton code of Fixed Layout Typing Method

--- a/src/engine/layout/CMakeLists.txt
+++ b/src/engine/layout/CMakeLists.txt
@@ -4,6 +4,7 @@ add_library(Layout
             layout.h
             methodphonetic.cpp
             methodphonetic.h
+            MethodFixedLayoutModern.cpp
             phoneticparser.cpp
             phoneticparser.h
             FixedLayoutParser.cpp
