--- a/src/engine/im/ibus/CMakeLists.txt
+++ b/src/engine/im/ibus/CMakeLists.txt
@@ -2,4 +2,5 @@ include_directories(. ../../ ../../layout ${IBUS_INCLUDE_DIRS})
 add_library(IM_iBus ibus_engine.cpp
                     ibus_keycode.h)
 
-target_link_libraries(IM_iBus Qt5::Core Qt5::Sql)
+#target_link_libraries(IM_iBus Qt5::Core Layout)
+target_link_libraries(IM_iBus Layout)
