Don't allow more than one instance. thanks to https://github.com/nuttyartist/notes

--- a/src/frontend/CMakeLists.txt
+++ b/src/frontend/CMakeLists.txt
@@ -14,10 +14,11 @@ set(SRC_MAIN main.cpp
              Layout.cpp
              Settings.cpp
              LayoutConverter.cpp
-             LayoutConverter.h)
+             LayoutConverter.h
+             SingleInstance.cpp)
 
 add_executable(OpenBangla-Keyboard ${SRC_MAIN} ${SRC_GUI})
-target_link_libraries(OpenBangla-Keyboard Qt5::Widgets Qt5::Xml)
+target_link_libraries(OpenBangla-Keyboard Qt5::Widgets Qt5::Xml Qt5::Network)
 
 install(TARGETS OpenBangla-Keyboard
 RUNTIME DESTINATION  ${PROJECT_DATADIR})
