Alhumdulillah! Ready for a release! :tada: Installation from a package feature Fixed many bugs Many other things... but forgot them :wink:

--- a/data/openbangla.xml.in
+++ b/data/openbangla.xml.in
@@ -5,10 +5,10 @@
     <name>org.freedesktop.IBus.OpenBangla</name>
     <description>OpenBangla Keyboard</description>
     <exec>@LIBEXEC_DIR@/OpenBangla-Engine --ibus</exec>
-    <version>1.0</version>
-    <author>See AboutBox</author>
+    <version>@PROJECT_VERSION@</version>
+    <author>See About Dialog</author>
     <license>GPL 3</license>
-    <homepage>http://openbangla.github.io</homepage>
+    <homepage>http://openbangla.github.io/OpenBangla-Keyboard</homepage>
     <textdomain>openbangla-keyboard</textdomain>
     <engines>
         <engine>
