--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required(VERSION 3.0.2)
 
-project(OpenBangla-Keyboard)
+project(OpenBangla-Keyboard VERSION 0.1.0)
 set(APP_NAME "OpenBangla-Keyboard")
+
+## Set versions
+add_definitions(-DPROJECT_VERSION="${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")
 
 ## Set Compiler Standard
 set(CMAKE_CXX_STANDARD 11)
@@ -37,23 +40,24 @@ set(CPACK_PACKAGE_VENDOR "Muhammad Mominul Huque")
 set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Muhammad Mominul Huque")
 set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
-set(CPACK_PACKAGE_VERSION_MAJOR "0")
-set(CPACK_PACKAGE_VERSION_MINOR "1")
-set(CPACK_PACKAGE_VERSION_PATCH "0")
+set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
+set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
+set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
+set(CPACK_DEBIAN_PACKAGE_DEPENDS "ibus,libibus-1.0-dev,libqt5core5a,libqt5widgets5,libqt5sql5,libqt5sql5-sqlite,libqt5xml5,libqt5network5")
 set(CPACK_PACKAGE_INSTALL_DIRECTORY "OpenBanglaKeyboard${CMake_VERSION_MAJOR}")
-if(WIN32 AND NOT UNIX)
+#if(WIN32 AND NOT UNIX)
   # There is a bug in NSI that does not handle full unix paths properly. Make
   # sure there is at least one set of four (4) backlasshes.
-  set(CPACK_PACKAGE_ICON "${CMake_SOURCE_DIR}/Utilities/Release\\\\InstallIcon.bmp")
-  set(CPACK_NSIS_INSTALLED_ICON_NAME "bin\\\\MyExecutable.exe")
-  set(CPACK_NSIS_DISPLAY_NAME "${CPACK_PACKAGE_INSTALL_DIRECTORY} My Famous Project")
-  set(CPACK_NSIS_HELP_LINK "http:\\\\\\\\www.my-project-home-page.org")
-  set(CPACK_NSIS_URL_INFO_ABOUT "http:\\\\\\\\www.my-personal-home-page.com")
-  set(CPACK_NSIS_CONTACT "me@my-personal-home-page.com")
-  set(CPACK_NSIS_MODIFY_PATH ON)
-else(WIN32 AND NOT UNIX)
-  set(CPACK_STRIP_FILES "bin/OpenBanglaKeyboard")
-  set(CPACK_SOURCE_STRIP_FILES "")
-endif(WIN32 AND NOT UNIX)
-set(CPACK_PACKAGE_EXECUTABLES "OpenBanglaKeyboard" "OpenBangla Keyboard")
+#  set(CPACK_PACKAGE_ICON "${CMake_SOURCE_DIR}/Utilities/Release\\\\InstallIcon.bmp")
+#  set(CPACK_NSIS_INSTALLED_ICON_NAME "bin\\\\MyExecutable.exe")
+#  set(CPACK_NSIS_DISPLAY_NAME "${CPACK_PACKAGE_INSTALL_DIRECTORY} My Famous Project")
+#  set(CPACK_NSIS_HELP_LINK "http:\\\\\\\\www.my-project-home-page.org")
+#  set(CPACK_NSIS_URL_INFO_ABOUT "http:\\\\\\\\www.my-personal-home-page.com")
+#  set(CPACK_NSIS_CONTACT "me@my-personal-home-page.com")
+#  set(CPACK_NSIS_MODIFY_PATH ON)
+#else(WIN32 AND NOT UNIX)
+#  set(CPACK_STRIP_FILES "bin/OpenBanglaKeyboard")
+#  set(CPACK_SOURCE_STRIP_FILES "")
+#endif(WIN32 AND NOT UNIX)
+#set(CPACK_PACKAGE_EXECUTABLES "OpenBanglaKeyboard" "OpenBangla Keyboard")
 include(CPack)
