Alhumdulillah, compile frontend on macOS! It is an initial port

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,13 @@ if(OS_LINUX)
   pkg_check_modules(IBUS REQUIRED ibus-1.0)
 endif(OS_LINUX)
 
-add_subdirectory(src/engine)
+if(APPLE)
+  include(cmake/CMakeMacOS.txt)
+endif()
+
+if(NOT APPLE)
+  add_subdirectory(src/engine)
+endif()
 add_subdirectory(src/frontend)
 
 
