--- a/src/frontend/CMakeLists.txt
+++ b/src/frontend/CMakeLists.txt
@@ -21,5 +21,7 @@ set(SRC_MAIN main.cpp
 add_executable(OpenBangla-Keyboard ${SRC_MAIN} ${SRC_GUI})
 target_link_libraries(OpenBangla-Keyboard Qt5::Widgets Qt5::Xml Qt5::Network)
 
+if(NOT APPLE)
 install(TARGETS OpenBangla-Keyboard
 RUNTIME DESTINATION  ${PROJECT_DATADIR})
+endif()
