Add pixmap directory and update .desktop file

--- a/data/openbangla-keyboard.desktop.in
+++ b/data/openbangla-keyboard.desktop.in
@@ -2,6 +2,6 @@
 Name=OpenBangla Keyboard
 Comment=An OpenSource, Unicode compliant Bengali Input Method.
 Exec=@PROJECT_DATADIR@/OpenBangla-Keyboard %f
-Icon=@PROJECT_DATADIR@/icons/OpenBangla-Keyboard.png
+Icon=openbangla-keyboard
 Type=Application
-Categories=Utility;
+Categories=Utility;Application;
