Enable the building of engine

--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -4,5 +4,10 @@ if(OS_LINUX)
   add_subdirectory(ibus)
 endif(OS_LINUX)
 
+if(APPLE)
+  ## Platform is macOS
+  add_subdirectory(macOS)
+endif()
+
 ## Include subdirectories
 add_subdirectory(libengine)
