Add C wrapper for libEngine, with module.modulemap But cache is not being created.....

--- a/src/engine/libengine/CMakeLists.txt
+++ b/src/engine/libengine/CMakeLists.txt
@@ -1,6 +1,6 @@
 include_directories(. ../ ../../shared)
-add_library(libEngine
-            Layout.cpp
+
+set(Sources Layout.cpp
             Layout.h
             MethodPhonetic.cpp
             MethodPhonetic.h
@@ -19,5 +19,15 @@ add_library(libEngine
             phoneticsuggestion.cpp
             phoneticsuggestion.h
             keycode.h)
+
+if(APPLE)
+  list(APPEND Sources CEngine.cpp)
+endif()
+
+add_library(libEngine ${Sources})
+
+if(APPLE)
+  target_compile_options(libEngine PUBLIC -fmodules -fmodule-map-file=${CMAKE_SOURCE_DIR}/src/engine/libengine/module.modulemap -fmodules-cache-path=${CMAKE_BINARY_DIR}/cache )
+endif()
 
 target_link_libraries(libEngine libShared Qt5::Core Qt5::Sql)
