--- a/src/engine/libengine/CMakeLists.txt
+++ b/src/engine/libengine/CMakeLists.txt
@@ -1,4 +1,4 @@
-include_directories(. ../ ../../shared)
+include_directories(. ../ ../../shared c-api/)
 
 set(Sources Layout.cpp
             Layout.h
@@ -18,16 +18,16 @@ set(Sources Layout.cpp
             cachemanager.h
             phoneticsuggestion.cpp
             phoneticsuggestion.h
-            keycode.h)
+            c-api/keycode.h)
 
 if(APPLE)
-  list(APPEND Sources CEngine.cpp CEngine.h)
+  list(APPEND Sources CEngine.cpp c-api/CEngine.h)
 endif()
 
 add_library(libEngine ${Sources})
 
 if(APPLE)
-  target_compile_options(libEngine PUBLIC -fmodules -fmodule-map-file=${CMAKE_SOURCE_DIR}/src/engine/libengine/module.modulemap -fmodules-cache-path=${CMAKE_BINARY_DIR}/cache )
+  target_compile_options(libEngine PUBLIC -fmodules -fmodule-map-file=${CMAKE_SOURCE_DIR}/src/engine/libengine/c-api/module.modulemap -fmodules-cache-path=${CMAKE_BINARY_DIR}/cache )
 endif()
 
 target_link_libraries(libEngine libShared Qt5::Core Qt5::Sql)
