--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ compiler:
   - clang
 
 before_script:
+  - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
+  - sudo apt-get update -qq
   - sudo apt-get install libibus-1.0-dev qt5-default qtdeclarative5-dev
   - mkdir build
   - cd build
