--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,12 @@ dist: trusty
 compiler:
   - g++
   - clang
-before_script:
-  - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
+before_install:
+  - sudo add-apt-repository ppa:beineri/opt-qt542-trusty
   - sudo apt-get update -qq
-  - sudo apt-get install libibus-1.0-dev qt5-default qtdeclarative5-dev
+  - sudo apt-get install libibus-1.0-dev qt54base
+  - source /opt/qt54/bin/qt54-env.sh
+before_script:
   - mkdir build
   - cd build
   - cmake .. -DCMAKE_INSTALL_PREFIX='/usr'
