--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ compiler:
 before_install:
   - sudo add-apt-repository --yes ppa:beineri/opt-qt542-trusty
   - sudo apt-get update -qq
-  - sudo apt-get install libibus-1.0-dev qt54base
+  - sudo apt-get install libibus-1.0-dev qt54base qt54declarative
   - source /opt/qt54/bin/qt54-env.sh
 before_script:
   - mkdir build
