--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,19 @@
 language: cpp
 sudo: required
 dist: trusty
+before_install:
+- if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+  sudo add-apt-repository --yes ppa:beineri/opt-qt551-trusty
+  sudo apt-get update -qq
+  sudo apt-get install libibus-1.0-dev qt55base qt55declarative
+  source /opt/qt55/bin/qt55-env.sh
+  fi
 matrix:
   include:
     - os: linux
-      compiler:
-        - g++
-        - clang
-      before_install:
-        - sudo add-apt-repository --yes ppa:beineri/opt-qt551-trusty
-        - sudo apt-get update -qq
-        - sudo apt-get install libibus-1.0-dev qt55base qt55declarative
-        - source /opt/qt55/bin/qt55-env.sh
+      compiler: g++
+    - os: linux
+      compiler: clang
     - os: osx
       osx_image: xcode8.2
 before_script:
