--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   sudo add-apt-repository --yes ppa:beineri/opt-qt551-trusty &&
   sudo apt-get update -qq &&
   sudo apt-get install libibus-1.0-dev qt55base qt55declarative &&
-  source /opt/qt55/bin/qt55-env.sh
+  source /opt/qt55/bin/qt55-env.sh;
   fi
 matrix:
   include:
