--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ matrix:
       compiler: clang
     - os: osx
       osx_image: xcode8.2
+      before_install:
+        - brew update
+        - brew install qt5
 before_script:
   - mkdir build
   - cd build
