--- a/src/engine/libengine/CMakeLists.txt
+++ b/src/engine/libengine/CMakeLists.txt
@@ -18,6 +18,8 @@ add_library(libEngine
             cachemanager.h
             PhoneticSuggestion.cpp
             PhoneticSuggestion.h
+            PhoneticSuggestionV2.cpp
+            PhoneticSuggestionV2.h
             keycode.h)
 
 target_link_libraries(libEngine libShared Qt5::Core Qt5::Sql)
