--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,6 @@ set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "ibus")
 set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
 set(CPACK_RPM_PACKAGE_LICENSE "GPLv3")
-set(CPACK_PACKAGE_INSTALL_DIRECTORY "OpenBanglaKeyboard${CMake_VERSION_MAJOR}")
+set(CPACK_RPM_PACKAGE_URL "https://github.com/OpenBangla/OpenBangla-Keyboard")
 set(CPACK_STRIP_FILES TRUE)
 include(CPack)
