Use efficient code  :sparkles: Reduce workaround code which I introduced for issue #17 Refactor TopBar::RefreshLayouts() to use efficient code.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "*.tcc": "cpp",
         "string_view": "cpp",
         "array": "cpp",
-        "initializer_list": "cpp"
+        "initializer_list": "cpp",
+        "chrono": "cpp"
     }
 }
