Implement widgets functionalities

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "array": "cpp",
         "initializer_list": "cpp",
         "chrono": "cpp",
-        "qmessagebox": "cpp"
+        "qmessagebox": "cpp",
+        "qtreewidget": "cpp"
     }
 }
