--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "initializer_list": "cpp",
         "chrono": "cpp",
         "qmessagebox": "cpp",
-        "qtreewidget": "cpp"
+        "qtreewidget": "cpp",
+        "atomic": "cpp"
     }
 }
