Include items from users autocorrect file in the dialog

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
         "chrono": "cpp",
         "qmessagebox": "cpp",
         "qtreewidget": "cpp",
-        "atomic": "cpp"
+        "atomic": "cpp",
+        "qvariant": "cpp",
+        "qmap": "cpp"
     }
 }
