--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,13 @@ compiler:
   - g++
   - clang
 before_install:
-  - sudo add-apt-repository --yes ppa:beineri/opt-qt551-trusty
+  - sudo add-apt-repository --yes ppa:beineri/opt-qt-5.10.1-trusty
   - sudo apt-get update -qq
-  - sudo apt-get install libibus-1.0-dev qt55base qt55declarative
-  - source /opt/qt55/bin/qt55-env.sh
+  - sudo apt-get install libibus-1.0-dev qt510base qt510declarative
+  - source /opt/qt510/bin/qt510-env.sh
 before_script:
   - mkdir build
   - cd build
-  - cmake .. -DCMAKE_INSTALL_PREFIX='/usr'
+  - cmake ..
 script:
   - make
