Rewrite LayoutConverter using QXmlStreamReader :tada: Remove the dependency on Qt5Xml library

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "qtreewidget": "cpp",
         "atomic": "cpp",
         "qvariant": "cpp",
-        "qmap": "cpp"
+        "qmap": "cpp",
+        "system_error": "cpp"
     }
 }
