--- a/src/frontend/CMakeLists.txt
+++ b/src/frontend/CMakeLists.txt
@@ -19,7 +19,7 @@ set(SRC_MAIN main.cpp
              SingleInstance.cpp)
 
 add_executable(OpenBangla-Keyboard ${SRC_MAIN} ${SRC_GUI})
-target_link_libraries(OpenBangla-Keyboard libEngine libShared Qt5::Widgets Qt5::Xml Qt5::Network)
+target_link_libraries(OpenBangla-Keyboard libEngine libShared Qt5::Widgets Qt5::Network)
 
 install(TARGETS OpenBangla-Keyboard
 RUNTIME DESTINATION  ${PROJECT_DATADIR})
